libraries/LiquidCrystal_I2C/http:::api.yeelink.net:v1.0:device:350523:sensor:3
http://api.yeelink.net/v1.0/device/350523/sensor/393394/datapoints
b9857bd2b879d64c5d25a1be3f195ab0


Arduino:1.6.10 (Mac OS X), 开发板："Arduino/Genuino Uno"

In file included from /Applications/Arduino.app/Contents/Java/hardware/arduino/avr/cores/arduino/Arduino.h:28:0,
                 from sketch/YeelinkClient.ino.cpp:1:
YeelinkClient:39: error: variable 'APIKey' must be const in order to be put into read-only section by means of '__attribute__((progmem))'
 char APIKey[] PROGMEM = "b9857bd2b879d64c5d25a1be3f195ab0"; // replace your yeelink api key here
               ^
YeelinkClient:40: error: variable 'DeviceID' must be const in order to be put into read-only section by means of '__attribute__((progmem))'
 char DeviceID[] PROGMEM = "350523"; // replace your device ID
                 ^
YeelinkClient:45: error: variable 'website' must be const in order to be put into read-only section by means of '__attribute__((progmem))'
 char website[] PROGMEM = "api.yeelink.net";
                ^
YeelinkClient:218: error: 'tmElements_t' has not been declared
 void timeconvert(IN char *buf,OUT tmElements_t *p)
                              ^
/Users/chenfeiyue/Documents/Arduino/YeelinkClient/YeelinkClient.ino: In function 'void setup()':
YeelinkClient:83: error: 'class EtherCard' has no member named 'mymask'
   ether.printIp("Netmask: ", ether.mymask);
                                    ^
/Users/chenfeiyue/Documents/Arduino/YeelinkClient/YeelinkClient.ino: In function 'void loop()':
YeelinkClient:94: error: 'class EtherCard' has no member named 'dhcpValid'
   if (!ether.dhcpValid() && !ether.dhcpSetup())
              ^
/Users/chenfeiyue/Documents/Arduino/YeelinkClient/YeelinkClient.ino: In function 'void setupTime()':
YeelinkClient:158: error: 'tmElements_t' was not declared in this scope
       tmElements_t time1;
       ^
YeelinkClient:159: error: 'time1' was not declared in this scope
       timeconvert(bufx,&time1);
                         ^
YeelinkClient:160: error: 'makeTime' was not declared in this scope
       time_t second = makeTime(time1);        
                                     ^
YeelinkClient:161: error: 'setTime' was not declared in this scope
       setTime(second);
                     ^
YeelinkClient:162: error: 'adjustTime' was not declared in this scope
       adjustTime(8*60*60);
                         ^
/Users/chenfeiyue/Documents/Arduino/YeelinkClient/YeelinkClient.ino: In function 'void displayClock()':
YeelinkClient:177: error: 'year' was not declared in this scope
   lcd.print(year());
                  ^
YeelinkClient:179: error: 'month' was not declared in this scope
   printDigits(month());
                     ^
YeelinkClient:181: error: 'day' was not declared in this scope
   printDigits(day());
                   ^
YeelinkClient:183: error: 'hour' was not declared in this scope
   printDigits(hour());
                    ^
YeelinkClient:185: error: 'minute' was not declared in this scope
   printDigits(minute());
                      ^
/Users/chenfeiyue/Documents/Arduino/YeelinkClient/YeelinkClient.ino: At global scope:
YeelinkClient:218: error: 'tmElements_t' has not been declared
 void timeconvert(IN char *buf,OUT tmElements_t *p)
                                   ^
/Users/chenfeiyue/Documents/Arduino/YeelinkClient/YeelinkClient.ino: In function 'void timeconvert(char*, int*)':
YeelinkClient:224: error: request for member 'Year' in '* p', which is of non-class type 'int'
   p->Year = ty - 1970;
      ^
YeelinkClient:225: error: request for member 'Month' in '* p', which is of non-class type 'int'
   p->Month = monthcmp(cmonth) + 1;
      ^
YeelinkClient:226: error: request for member 'Day' in '* p', which is of non-class type 'int'
   p->Day = td;
      ^
YeelinkClient:227: error: request for member 'Hour' in '* p', which is of non-class type 'int'
   p->Hour = th;
      ^
YeelinkClient:228: error: request for member 'Minute' in '* p', which is of non-class type 'int'
   p->Minute = tm;
      ^
YeelinkClient:229: error: request for member 'Second' in '* p', which is of non-class type 'int'
   p->Second = ts;
      ^
exit status 1
Yeelink

在文件 -> 首选项开启
“编译过程中显示详细输出”选项
这份报告会包含更多信息。
